--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "This is a twitter clone using express and node",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Assaf P and Jeremy B",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.1",
     "express": "^4.13.3"
   }
 }
