--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "swig": "^1.4.2"
   }
 }
